here shown how to work with styles, attributes and classes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           alt="Лого Просто Банк"
           class="nav__logo"
           id="logo"
-        />
+          data-version-number="2.0"/>
         <div class="nav__text">Просто Банк</div>
         <ul class="nav__links">
           <li class="nav__item">
