here implemented Event propagation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           class="nav__logo"
           id="logo"
           data-version-number="2.0"/>
+        <!-- <div class="nav__text" onclick="alert('HTML onclick')">Просто Банк</div> -->
         <div class="nav__text">Просто Банк</div>
         <ul class="nav__links">
           <li class="nav__item">
