--- a/index.html
+++ b/index.html
@@ -142,29 +142,20 @@
 
       <div class="operations">
         <div class="operations__tab-container">
-          <button
-            class="
-              btn
-              operations__tab operations__tab--1 operations__tab--active
-            "
-            data-tab="1"
-          >
+          <button class="btn operations__tab operations__tab--1 operations__tab--active" data-tab="1">
+            <span>😇</span>
             Мгновенные переводы
           </button>
           <button class="btn operations__tab operations__tab--2" data-tab="2">
+            <span>😇</span>
             Мгновенные Займы
           </button>
           <button class="btn operations__tab operations__tab--3" data-tab="3">
+            <span>😇</span>
             Мгновенное Закрытие
           </button>
         </div>
-        <div
-          class="
-            operations__content
-            operations__content--1
-            operations__content--active
-          "
-        >
+        <div class="operations__content operations__content--1 operations__content--active">
           <div class="operations__icon operations__icon--1">
             <svg>
               <use xlink:href="img/icons.svg#icon-upload"></use>
